fix: issue with extra column gap in the comment's grid

--- a/src/components/Comment/comment.module.css
+++ b/src/components/Comment/comment.module.css
@@ -13,7 +13,6 @@
 .comment p {
   color: var(--gray-dark-c);
   grid-column-start: 1;
-  grid-column-end: span 2;
 }
 
 .header {
